--- a/templates/services/svctempo.yaml
+++ b/templates/services/svctempo.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ports:
     - name: {{ .Values.services.tempo.name }}
-      port: 4317
+      port: {{ .Values.ingresses.tempo.port }}
       protocol: TCP
       targetPort: {{ .Values.services.tempo.port }}
   selector:
