--- a/values.yaml
+++ b/values.yaml
@@ -13,6 +13,8 @@ app:
 ingresses:
   tempo:
     host: tempo.131.154.98.206.myip.cloud.infn.it # change this to your desired hostname
+    port: 443 # external port where the service is exposed
+    auth_enabled: false
   
   grafana:
     host: grafanavk.131.154.98.206.myip.cloud.infn.it # change this to your desired hostname
@@ -20,6 +22,13 @@ ingresses:
 config:
   grafana:
     admin_user: admin # change this to your desired username
-    admin_password: admin # change this to your desired password
+    admin_password: password # change this to your desired password
     http_port: 3000 # do not change if you don't know what you are doing
     http_addr: 0.0.0.0 # do not change if you don't know what you are doing
+
+auth:
+  tempo:
+    username: username # change this to your desired username
+    password: $apr1$6BZqNMcL$ITbyluYyeslJuxVTUyd4v0 # change this to your desired passwor; to generate a new password use htpasswd -c auth username
+
+maintainerEmail: "gibianch@pg.infn.it"
