--- a/templates/ingresses/ing-tempo.yaml
+++ b/templates/ingresses/ing-tempo.yaml
@@ -37,11 +37,14 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-    {{- if .Values.ingresses.tempo.auth_enabled }}
-    nginx.ingress.kubernetes.io/auth-type: basic
-    nginx.ingress.kubernetes.io/auth-secret: basic-auth
-    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
+
+    {{- if .Values.ingresses.tempo.mTLS_enabled }}
+    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
+    nginx.ingress.kubernetes.io/auth-tls-secret: "interlink-mon/my-client-ca-secret"
+    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
+    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
     {{- end }}
+
     nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
 
   name: tempo-ingress
