--- a/templates/ingresses/ing-tempo.yaml
+++ b/templates/ingresses/ing-tempo.yaml
@@ -37,15 +37,13 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-
-    {{- if .Values.ingresses.tempo.mTLS_enabled }}
+    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
+    {{- if .Values.ingresses.tempo.mTLSEnabled }}
     nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
-    nginx.ingress.kubernetes.io/auth-tls-secret: "interlink-mon/my-client-ca-secret"
+    nginx.ingress.kubernetes.io/auth-tls-secret: "{{ .Release.Namespace }}/my-client-ca-secret"
     nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
     nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
     {{- end }}
-
-    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
 
   name: tempo-ingress
   namespace: {{ .Release.Namespace }}
