--- a/templates/grafana-vk.yaml
+++ b/templates/grafana-vk.yaml
@@ -52,27 +52,25 @@ spec:
         - name: GF_DASHBOARDS_JSON_ENABLED
           value: "true"
         volumeMounts:
-        - name: grafanadashboardhttp
-          mountPath: /etc/grafana/provisioning/dashboards/dashboardHTTP.json
-          subPath: dashboardHTTP.json
-          readOnly: false
-        - name: grafanadashboardhttpfailed
-          mountPath: /etc/grafana/provisioning/dashboards/dashboardHTTPFailed.json
-          subPath: dashboardHTTPFailed.json
-          readOnly: false
-        - name: grafanadashboardk8s
-          mountPath: /etc/grafana/provisioning/dashboards/dashboardK8S.json
-          subPath: dashboardK8S.json
-          readOnly: false
-        - mountPath: /etc/grafana/provisioning/datasources
-          name: grafana-datasources
-          readOnly: false
-        - name: grafana-dashboard-providers
-          mountPath: /etc/grafana/provisioning/dashboards/provider.yaml
-          subPath: provider.yaml
-        - name: grafana-config
-          mountPath: /etc/grafana/grafana.ini
-          subPath: grafana.ini
+        {{- range $index, $service := .Values.config.grafana.servicesVKInterLink }}
+          - name: grafanadashboardhttp{{ $index }}
+            mountPath: /etc/grafana/provisioning/dashboards/dashboardHTTP{{ $index }}.json
+            subPath: dashboardHTTP{{ $index }}.json
+            readOnly: false
+        {{- end }}
+          - name: grafanadashboardk8s
+            mountPath: /etc/grafana/provisioning/dashboards/dashboardK8S.json
+            subPath: dashboardK8S.json
+            readOnly: false
+          - mountPath: /etc/grafana/provisioning/datasources
+            name: grafana-datasources
+            readOnly: false
+          - name: grafana-dashboard-providers
+            mountPath: /etc/grafana/provisioning/dashboards/provider.yaml
+            subPath: provider.yaml
+          - name: grafana-config
+            mountPath: /etc/grafana/grafana.ini
+            subPath: grafana.ini
       volumes:
       - name: config-volume
         configMap:
@@ -88,12 +86,11 @@ spec:
         configMap:
           defaultMode: 420
           name: my-grafana-datasources
-      - name: grafanadashboardhttp
+      {{- range $index, $service := .Values.config.grafana.servicesVKInterLink }}
+      - name: grafanadashboardhttp{{ $index }}
         configMap:
-          name: grafanadashboardhttp
-      - name: grafanadashboardhttpfailed
-        configMap:
-          name: grafanadashboardhttpfailed
+          name: grafanadashboardhttp{{ $index }}
+      {{- end }}
       - name: grafanadashboardk8s
         configMap:
           name: grafanadashboardk8s
