added basic auth for tempo as external exporter

--- a/templates/configmaps/cfg-tempo.yaml
+++ b/templates/configmaps/cfg-tempo.yaml
@@ -7,6 +7,7 @@ data:
   tempo.yaml: |
     stream_over_http_enabled: true
     server:
+      http_listen_address: 0.0.0.0
       http_listen_port: 3200
       log_level: debug
 
