--- a/templates/services/svc-grafana.yaml
+++ b/templates/services/svc-grafana.yaml
@@ -6,11 +6,11 @@ metadata:
 spec:
   ports:
     - name: {{ .Values.services.grafanavk.name }}
-      port: 80
+      port: {{ .Values.ingresses.grafana.port }}
       protocol: TCP
       targetPort: {{ .Values.services.grafanavk.port }}
   selector:
-    app: grafanavk
+    app: {{ .Values.app.name }}
   type: ClusterIP
 status:
   loadBalancer: {}
