--- a/values.yaml
+++ b/values.yaml
@@ -39,16 +39,13 @@ config:
     http_addr: 0.0.0.0 # do not change if you don't know what you are doing
 
     servicesVKInterLink:
-      #- VK-InterLink-67271c82-d19b-41cf-b937-e7f5fcd7349d
       - VK-InterLink-67271c82-d19b-41cf-b937-e7f5fcd7349d
 
     servicesInterLinkPlugin:
       - InterLink-Plugin-588cf471-ed78-44e3-85ba-7d49d322e311
 
-    # #services_Plugin:
-    # #  - Plugin-67271c82-d19b-41cf-b937-e7f5fcd7349d
-   
-    #service_name: VK-InterLink-07E1F4F2-7064-4672-A5CD-F86D3895C096
+    servicesPlugin:
+      - Plugin-51f5918b-3c90-428d-a9c8-db5db9b0697c
 
 auth:
   tempo:
